chore: update deploy, readme

--- a/.config/k8s/ingress.yml
+++ b/.config/k8s/ingress.yml
@@ -59,6 +59,16 @@ spec:
                 name: app
                 port:
                   number: 3000
+    - host: "data.vatsim-radar.com"
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: data
+                port:
+                  number: 3000
 ---
 apiVersion: apps/v1
 kind: Deployment
