--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-beta.5",
   "private": true,
   "type": "module",
   "scripts": {
