--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
+    "@navigraph/amdb": "^1.1.0",
     "@pinia/nuxt": "^0.9.0",
     "@prisma/client": "^6.1.0",
     "@turf/difference": "^7.2.0",
