--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "private": true,
   "type": "module",
   "scripts": {
@@ -38,12 +38,14 @@
     "aws-sdk": "^2.1692.0",
     "chardet": "^2.0.0",
     "croner": "^9.0.0",
+    "deep-equal": "^2.2.3",
     "discord.js": "^14.17.3",
     "idb": "^8.0.1",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "kafkajs": "^2.2.4",
+    "klona": "^2.0.6",
     "marked": "^15.0.6",
     "merge-ranges": "^1.0.2",
     "metar-taf-parser": "^9.1.1",
@@ -69,6 +71,7 @@
     "@stylistic/eslint-plugin": "^2.12.1",
     "@stylistic/stylelint-plugin": "^3.1.1",
     "@types/adm-zip": "^0.5.7",
+    "@types/deep-equal": "^1.0.4",
     "@types/geojson": "^7946.0.15",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/merge-ranges": "^1.0.2",
@@ -80,7 +83,7 @@
     "postcss-html": "^1.7.0",
     "sass-embedded": "^1.83.1",
     "stylelint": "^16.12.0",
-    "stylelint-config-clean-order": "^6.1.0",
+    "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.1",
