feat: improved stand locations

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@turf/kinks": "^7.2.0",
     "@turf/line-intersect": "^7.2.0",
     "@turf/meta": "^7.2.0",
+    "@turf/nearest-point-on-line": "^7.2.0",
     "@turf/truncate": "^7.2.0",
     "@turf/union": "^7.2.0",
     "@vite-pwa/nuxt": "^0.10.6",
