--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,13 +62,13 @@ jobs:
       - name: Apply Worker
         run: kubectl rollout restart deployment worker-prod
       - name: Apply VG
-        run: kubectl rollout restart deployment vatglasses-next
+        run: kubectl rollout restart deployment vatglasses
       - name: Validate App
         run: kubectl rollout status deployment app-prod
       - name: Validate Worker
         run: kubectl rollout status deployment worker-prod
       - name: Validate VG
-        run: kubectl rollout status deployment vatglasses-next
+        run: kubectl rollout status deployment vatglasses
 
   deploy-db-redis:
     runs-on: ubuntu-latest
