--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.0.2-alpha.01",
+  "version": "1.0.1-1-final",
   "private": true,
   "type": "module",
   "scripts": {
