--- a/.config/k8s/ingress.yml
+++ b/.config/k8s/ingress.yml
@@ -205,7 +205,7 @@ data:
         </div>
         <div class="error_text">
             VATSIM Radar is most likely updating. This may take a few minutes.<br>
-            If this issue persists for more than 5 minutes, please visit our <a
+            If this issue persists for more than 5-10 minutes, please visit our <a
             href="https://discord.com/invite/MtFKhMPePe" target="_blank">Discord</a> to get status update.
         </div>
         <div class="error_image">
