--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -6,6 +6,8 @@ COPY yarn.lock yarn.lock
 COPY .yarn /radar/.yarn/
 COPY .yarnrc.yml .yarnrc.yml
 
+ENV NODE_ENV=production
+
 RUN apt-get update
 RUN apt-get install -y default-mysql-client
 
