--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vatsim-radar",
-  "version": "1.0.1-final",
+  "version": "1.1.0-alpha.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -23,7 +23,7 @@
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
     "@pinia/nuxt": "^0.9.0",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.3.0",
     "@turf/difference": "^7.2.0",
     "@turf/great-circle": "^7.2.0",
     "@turf/helpers": "^7.2.0",
@@ -41,7 +41,7 @@
     "croner": "^9.0.0",
     "deep-equal": "^2.2.3",
     "discord.js": "^14.17.3",
-    "idb": "^8.0.1",
+    "idb": "^8.0.2",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
@@ -50,11 +50,12 @@
     "marked": "^15.0.6",
     "merge-ranges": "^1.0.2",
     "metar-taf-parser": "^9.1.1",
-    "nuxt": "3.15.2",
-    "ol": "^10.3.1",
+    "nuxt": "3.15.4",
+    "ol": "^10.4.0",
     "ol-mapbox-style": "^12.4.0",
     "pinia": "^2.3.1",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.0",
+    "protomaps-themes-base": "^4.4.0",
     "sharp": "^0.33.5",
     "sqlite3": "^5.1.7",
     "svgo": "^3.3.2",
@@ -67,24 +68,24 @@
   },
   "devDependencies": {
     "@navigraph/amdb": "^1.1.0",
-    "@nuxt/devtools": "^1.7.0",
-    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/devtools": "^2.0.0-beta.4",
+    "@nuxt/eslint": "^1.0.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@stylistic/eslint-plugin": "^3.0.0",
+    "@stylistic/eslint-plugin": "^3.0.1",
     "@stylistic/stylelint-plugin": "^3.1.1",
     "@types/adm-zip": "^0.5.7",
     "@types/deep-equal": "^1.0.4",
     "@types/geojson": "^7946.0.16",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/merge-ranges": "^1.0.2",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.0",
     "@types/ws": "^8.5.14",
     "eslint": "^9.19.0",
     "fast-xml-parser": "^4.5.1",
     "postcss": "^8.5.1",
     "postcss-html": "^1.8.0",
     "sass-embedded": "^1.83.4",
-    "stylelint": "^16.14.0",
+    "stylelint": "^16.14.1",
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
