--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -1,20 +1,18 @@
-FROM node:22
+FROM oven/bun:1.2.0
 WORKDIR /radar
 
 COPY package.json package.json
-COPY yarn.lock yarn.lock
-COPY .yarn /radar/.yarn/
-COPY .yarnrc.yml .yarnrc.yml
+COPY bun.lock bun.lock
 
 RUN apt-get update
 RUN apt-get install -y default-mysql-client
 
-RUN yarn
+RUN bun install
 
 COPY . /radar
 RUN ls -la
-RUN npx prisma generate
-RUN yarn build
+RUN bunx prisma generate
+RUN bun run build
 
 EXPOSE 3000
-CMD ["sh", "-c", "npx prisma migrate deploy && export $(grep -v '^#' /radar/.env | xargs) && node /radar/.output/server/index.mjs"]
+CMD ["sh", "-c", "bunx prisma migrate deploy && export $(grep -v '^#' /radar/.env | xargs) && bun run /radar/.output/server/index.mjs"]
