--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "merge-ranges": "^1.0.2",
     "metar-taf-parser": "^9.1.1",
     "nuxt": "3.15.4",
-    "ol": "^10.3.1",
+    "ol": "^10.4.0",
     "ol-mapbox-style": "^12.4.0",
     "pinia": "^2.3.1",
     "prisma": "^6.3.0",
@@ -68,10 +68,10 @@
   },
   "devDependencies": {
     "@navigraph/amdb": "^1.1.0",
-    "@nuxt/devtools": "^1.7.0",
-    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/devtools": "^2.0.0-beta.4",
+    "@nuxt/eslint": "^0.7.6",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@stylistic/eslint-plugin": "^3.0.0",
+    "@stylistic/eslint-plugin": "^3.0.1",
     "@stylistic/stylelint-plugin": "^3.1.1",
     "@types/adm-zip": "^0.5.7",
     "@types/deep-equal": "^1.0.4",
