--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NAVIGRAPH_SERVER_SECRET=
 VATSIM_CLIENT_ID=819
 VATSIM_CLIENT_SECRET=QqahebIdibK4rNsFyg8AKbx9lbdYpORwDuR0NBDe
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
+VATSIM_IDENT_TOKEN=
 
 DOMAIN=http://localhost:8080
 DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public
