Update influx registry
(cherry picked from commit 9812697926adad29ff9c7d59cddeb37c55f92a9c)

--- a/.config/k8s/influx.yml
+++ b/.config/k8s/influx.yml
@@ -26,10 +26,10 @@ spec:
         app: influx
     spec:
       nodeSelector:
-        doks.digitalocean.com/node-pool: influx
+        doks.digitalocean.com/node-pool: influx-4
       containers:
         - name: influx
-          image: registry.nyan404.ru/telegraf-influxdb:latest
+          image: reg.nyan404.ru/telegraf-influxdb:latest
           imagePullPolicy: Always
           resources:
             requests:
