Fix strategy for influx

--- a/.config/k8s/influx.yml
+++ b/.config/k8s/influx.yml
@@ -15,7 +15,7 @@ metadata:
 spec:
   progressDeadlineSeconds: 600
   strategy:
-    type: Recreate
+    type: RollingUpdate
   replicas: 1
   selector:
     matchLabels:
