--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
             test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/8080'"
             interval: 1s
             retries: 360
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
         depends_on:
             db:
                 condition: service_healthy
@@ -36,6 +38,8 @@ services:
             - 8880:8880
         volumes:
             - ".:/radar:rw"
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
         depends_on:
             db:
                 condition: service_healthy
