--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
         build:
             context: .
             dockerfile: .config/dev.Dockerfile
+        image: vr-1.1.0
         env_file:
             - ./.env
         container_name: vatsim-radar
@@ -30,6 +31,7 @@ services:
         build:
             context: .
             dockerfile: .config/dev.Dockerfile
+        image: vr-1.1.0
         env_file:
             - ./.env
         container_name: vatsim-radar-worker
@@ -52,6 +54,7 @@ services:
         build:
             context: .
             dockerfile: .config/dev.Dockerfile
+        image: vr-1.1.0
         env_file:
             - ./.env
         container_name: vatsim-radar-vg-worker
