--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 22.x
       - uses: ./.github/actions/codecheck
+
   push:
     runs-on: ubuntu-latest
     needs:
@@ -41,6 +42,31 @@ jobs:
           context: .
           push: true
           file: .config/Dockerfile
+
+  push-influx:
+    runs-on: ubuntu-latest
+    needs:
+      - check
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Add .env file
+        run: echo "${{ secrets.ENV }}" > .env
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          tags: ghcr.io/vatsim-radar/vatsim-radar/influx:latest
+          context: .
+          push: true
+          file: .config/influx.Dockerfile
 
   deploy-app:
     runs-on: ubuntu-latest
@@ -74,6 +100,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - push
+      - push-influx
     permissions:
       contents: read
     steps:
