Update deploy script

--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -123,7 +123,7 @@ jobs:
       - name: Deploy Influx
         run: kubectl apply -f .config/k8s/influx.yml
       - name: Validate Influx
-        run: kubectl rollout status deployment influx
+        run: kubectl rollout status deployment influx-v2
 
   deploy-ingress:
     runs-on: ubuntu-latest
