--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,3 +96,4 @@ services:
             - REDIS_APPLICATION_MODE=master
         volumes:
             - ./.config/redis.conf:/usr/local/etc/redis/redis.conf
+            - ./.config/redis:/data
