--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-config-standard": "^37.0.0",
+    "tsx": "4.16.2",
     "typescript": "5.8.2",
     "vite-plugin-eslint2": "^5.0.3",
     "vue-tsc": "2.2.8"
