--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vuedraggable": "^4.1.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
