--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "7zip-min": "^2.0.0",
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
     "@pinia/nuxt": "^0.10.1",
