--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -158,7 +158,7 @@ jobs:
         run: yarn docs:build
       - name: Deploy to Cloudflare Pages
         run: |
-          wrangler pages deploy ./docs/.vitepress/dist \
+          npx wrangler pages deploy ./docs/.vitepress/dist \
             --project-name=$PROJECT_NAME
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
