--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
             - "host.docker.internal:host-gateway"
 
     worker:
-        restart: on-failure
+        restart: unless-stopped
         build:
             context: .
             dockerfile: .config/dev.Dockerfile
@@ -52,7 +52,7 @@ services:
             - "host.docker.internal:host-gateway"
 
     vatglasses-worker:
-        restart: on-failure
+        restart: unless-stopped
         build:
             context: .
             dockerfile: .config/dev.Dockerfile
