--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -43,6 +43,31 @@ jobs:
           push: true
           file: .config/Dockerfile
 
+  push-public:
+    runs-on: ubuntu-latest
+    needs:
+      - check
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Add .env file
+        run: cp .env.example .env
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          tags: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
+          context: .
+          push: true
+          file: .config/Dockerfile
+
   push-influx:
     runs-on: ubuntu-latest
     needs:
