--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "start:next": "docker compose pull ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest && docker compose -f docker-compose.prebuilt.yml",
+    "start:prod": "docker compose pull ghcr.io/vatsim-radar/vatsim-radar/production-prebuilt:latest && docker compose -f docker-compose.prebuilt.yml -f docker-compose.prebuilt-prod.yml",
     "prepare": "nuxt prepare",
     "generate": "nuxt generate",
     "preview": "node .output/server/index.mjs",
@@ -77,7 +79,7 @@
     "@navigraph/amdb": "^1.1.0",
     "@nuxt/devtools": "^2.3.2",
     "@nuxt/eslint": "^1.3.0",
-    "@nuxtjs/stylelint-module": "5.2.0",
+    "@nuxtjs/stylelint-module": "5.2.1",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@stylistic/stylelint-plugin": "^3.1.2",
     "@types/adm-zip": "^0.5.7",
@@ -96,7 +98,7 @@
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-config-recommended-vue": "^1.6.0",
-    "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-standard": "^38.0.0",
     "tsx": "4.16.2",
     "typescript": "5.8.3",
     "vite-plugin-eslint2": "^5.0.3",
