--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,20 +1,17 @@
 services:
     frontend:
-        image: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
+        build:
+            context: .
+            dockerfile: .config/Dockerfile
+        image: vr-prod-1.1.1
         env_file:
             - ./.env
-        container_name: vatsim-radar-prebuilt
+        container_name: vatsim-radar-prod
         expose:
-            - 3000
             - 8080
+            - 3000
         ports:
             - "8080:3000"
-        environment:
-            - NITRO_HOST=0.0.0.0
-            - NUXT_PUBLIC_VR_DEBUG=1
-            - VR_DEBUG=1
-        volumes:
-            - "./src/data:/radar/src/data:rw"
         healthcheck:
             test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/8080'"
             interval: 1s
@@ -28,17 +25,16 @@ services:
             - "host.docker.internal:host-gateway"
 
     worker:
-        image: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
+        restart: unless-stopped
+        build:
+            context: .
+            dockerfile: .config/Dockerfile
+        image: vr-prod-1.1.1
         env_file:
             - ./.env
-        container_name: vatsim-radar-prebuilt-worker
+        container_name: vatsim-radar-prod-worker
         ports:
             - 8880:8880
-        environment:
-            - NUXT_PUBLIC_VR_DEBUG=1
-            - VR_DEBUG=1
-        volumes:
-            - "./src/data:/radar/src/data:rw"
         depends_on:
             db:
                 condition: service_healthy
@@ -50,15 +46,14 @@ services:
             - "host.docker.internal:host-gateway"
 
     vatglasses-worker:
-        image: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
+        restart: unless-stopped
+        build:
+            context: .
+            dockerfile: .config/Dockerfile
+        image: vr-prod-1.1.1
         env_file:
             - ./.env
-        container_name: vatsim-radar-prebuilt-vg
-        environment:
-            - NUXT_PUBLIC_VR_DEBUG=1
-            - VR_DEBUG=1
-        volumes:
-            - "./src/data:/radar/src/data:rw"
+        container_name: vatsim-radar-prod-vg-worker
         depends_on:
             db:
                 condition: service_healthy
@@ -66,12 +61,10 @@ services:
                 condition: service_started
             frontend:
                 condition: service_healthy
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
 
     db:
         image: mysql
-        container_name: vatsim-radar-prebuilt-db
+        container_name: vatsim-radar-prod-db
         cap_add:
             - SYS_NICE
         environment:
@@ -90,7 +83,7 @@ services:
 
     redis:
         image: redis
-        container_name: vatsim-radar-prebuilt-redis
+        container_name: vatsim-radar-prod-redis
         command: redis-server /usr/local/etc/redis/redis.conf --requirepass RADAR
         expose:
             - 6379
