--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -66,7 +66,7 @@ jobs:
           tags: ghcr.io/vatsim-radar/vatsim-radar/next-prebuilt:latest
           context: .
           push: true
-          file: .config/Dockerfile
+          file: .config/debug.Dockerfile
 
   push-influx:
     runs-on: ubuntu-latest
